# tree-sitter-sea

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.sea  tree-sitter.json
.zed/: settings.json
bindings/c/: tree-sitter-sea.pc.in
bindings/c/tree_sitter/: tree-sitter-sea.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sea/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSeaTests/: TreeSitterSeaTests.swift
src/: grammar.json  node-types.json  parser.c
